--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
-    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile project(':opencv')
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
+
 
