--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile files('libs/javasift.jar')
 }
 
 
