--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
-include ':app', ':opencv'
+include ':app', ':opencv', ':FloatingButton'
 project(':opencv').projectDir = new File('opencv-java-2.4.9/app')
+project(':FloatingButton').projectDir = new File('FloatingPoint')
